tests/include/include.exp
Error ---------------------------------------------------------------------------------------- ../foo/batman/baz.js:3:17

Cannot assign `"not a number"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   ../foo/batman/baz.js:3:17
   3| var x: number = "not a number" // Error string ~> number
                      ^^^^^^^^^^^^^^ [1]

References:
   ../foo/batman/baz.js:3:8
   3| var x: number = "not a number" // Error string ~> number
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------- ../globbed/keep/ignored.js:1:22

Cannot assign `"not a number"` to `kept` because string [1] is incompatible with number [2]. [incompatible-type]

   ../globbed/keep/ignored.js:1:22
   1| const kept: number = "not a number";
                           ^^^^^^^^^^^^^^ [1]

References:
   ../globbed/keep/ignored.js:1:13
   1| const kept: number = "not a number";
                  ^^^^^^ [2]


Error ------------------------------------------------------------------------------------ ../globbed/nested/bad.js:1:25

Cannot assign `"not a number"` to `globbed` because string [1] is incompatible with number [2]. [incompatible-type]

   ../globbed/nested/bad.js:1:25
   1| const globbed: number = "not a number";
                              ^^^^^^^^^^^^^^ [1]

References:
   ../globbed/nested/bad.js:1:16
   1| const globbed: number = "not a number";
                     ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ ../included/test.js:1:1

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]

   ../included/test.js:1:1
   1| 123 as string;
      ^^^ [1]

References:
   ../included/test.js:1:8
   1| 123 as string;
             ^^^^^^ [2]



Found 4 errors
